<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="base_url">https://itunes.apple.com/</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="library">Медиатека</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="androidDevLink">https://practicum.yandex.ru/android-developer/</string>
    <string name="recipientEmail">k4linromain@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="userAgreementLink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_connection">Проблема со связью</string>
    <string name="no_connection_extra">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="lenght">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time">00:00</string>
    <string name="favoritesPlaceholder">Ваша медиатека пуста</string>
    <string name="playlistsPlaceholder">Вы не создали\n ни одного плейлиста</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist">Плейлист </string>
    <string name="created"> создан</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlistDialogTitle">Завершить создание плейлиста?</string>
    <string name="playlistDialogBody">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="addedToPlaylist">Добавлено в плейлист </string>
    <string name="hasAlreadyBeenAdded">Трек уже добавлен в плейлист </string>
    <string name="tracks_a">трека</string>
    <string name="track_ov">треков</string>
    <string name="tracks_">трек</string>
    <string name="images">Images</string>
    <string name="minutes">минут</string>
    <string name="deleteTrack">Хотите удалить трек?</string>
    <string name="deletePlaylist">Хотите удалить плейлист </string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="share">Поделиться</string>
    <string name="editInfo">Редактировать информацию</string>
    <string name="toDeletePlaylist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="noTracksYet">В этом плейлисте ещё нет треков</string>
    <string name="noTracksForShare">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>