<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BackgroundStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/headlineText"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin40"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/NightModeSwitch"
            style="@style/SettingButtonStyle"
            android:text="@string/dark_theme"
            app:thumbTint="?attr/colorOnSecondary"
            app:trackTint="?attr/colorSecondaryVariant" />

        <Button
            android:id="@+id/shareBtn"
            style="@style/SettingButtonStyle"
            android:text="@string/share_app"
            app:icon="@drawable/ic_share"
            app:iconGravity="end"
            app:iconTint="?attr/colorOnPrimary" />

        <Button
            android:id="@+id/supportBtn"
            style="@style/SettingButtonStyle"
            android:text="@string/text_support"
            app:icon="@drawable/ic_support"
            app:iconGravity="end"
            app:iconTint="?attr/colorOnPrimary" />

        <Button
            android:id="@+id/agreementBtn"
            style="@style/SettingButtonStyle"
            android:text="@string/user_agreement"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="end"
            app:iconTint="?attr/colorOnPrimary" />

    </LinearLayout>
</LinearLayout>