<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BackgroundStyle"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/goBackBtn"
            style="@style/goBackBtnStyle"
            />

        <TextView
            style="@style/headlineText"
            android:text="@string/settings"
             />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_indention"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/NightModeSwitch"
            android:text="@string/dark_theme"
            app:thumbTint="?attr/colorOnSecondary"
            app:trackTint="?attr/colorSecondaryVariant"
            style="@style/SettingButtonStyle"
            />

        <Button
            android:id="@+id/shareBtn"
            app:icon="@drawable/ic_share"
            app:iconGravity="end"
            app:iconTint="?attr/colorOnPrimary"
            android:text="@string/share_app"
            style="@style/SettingButtonStyle"/>

        <Button
            android:id="@+id/supportBtn"
            app:icon="@drawable/ic_support"
            app:iconGravity="end"
            app:iconTint="?attr/colorOnPrimary"
            android:text="@string/text_support"
            style="@style/SettingButtonStyle"/>

        <Button
            android:id="@+id/agreementBtn"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="end"
            app:iconTint="?attr/colorOnPrimary"
            android:text="@string/user_agreement"
            style="@style/SettingButtonStyle"/>

    </LinearLayout>
</LinearLayout>