<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimaryVariant"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:paddingTop="@dimen/padding_top"
    android:paddingBottom="28dp"
    style="@style/BackgroundStyle">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:text="@string/app_name"
    android:textColor="@color/white"
    android:textSize="@dimen/headline_text"
    android:fontFamily="@font/ys_display_medium"/>

<LinearLayout
android:layout_marginTop="@dimen/top_indention"
android:background="?android:attr/selectableItemBackground"
style="@style/BackgroundStyle"  >

<Button
    android:id="@+id/search_button"
    app:icon="@drawable/ic_search"
    android:text="@string/search"
    style="@style/MenuButtonStyle"/>

<Button
    android:id="@+id/library_button"
    app:icon="@drawable/ic_library"
    android:text="@string/library"
    style="@style/MenuButtonStyle"/>

<Button
    android:id="@+id/settings_button"
    app:icon="@drawable/ic_settings"
    android:text="@string/settings"
    android:layout_marginBottom="0dp"
    style="@style/MenuButtonStyle"
   />
</LinearLayout>
    </LinearLayout>