<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    tools:context=".playlistCreator.ui.NewPlaylistFragment">

    <ImageButton
        android:id="@+id/goBackBtn"
        style="@style/goBackBtnStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headlineText"
        style="@style/headlineText"
        android:layout_marginTop="15dp"
        android:text="@string/newPlaylist"
        app:layout_constraintStart_toEndOf="@+id/goBackBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/artworkImage"
        android:layout_width="@dimen/artwork_side"
        android:layout_height="@dimen/artwork_side"
        android:layout_marginTop="82dp"
        android:background="@drawable/artwork_frame"
        android:scaleType="centerInside"
        android:src="@drawable/ic_add_artwork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditLayout"
        style="@style/new_playlist_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artworkImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descEditLayout"
        style="@style/new_playlist_edit_text"
        android:layout_marginTop="@dimen/margin16"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createBtn"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/create_btn_selector"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>